# mc-v2

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/mc-cli/: Cargo.toml
crates/mc-cli/src/: backtest.rs  backtest_tests.rs  build_benchmarks.rs  context_events.rs  diff.rs  eval_common.rs  grade.rs  grade_tests.rs  ledger_export.rs  loader.rs  main.rs  mcp.rs  narrate.rs  narrate_trends.rs  query.rs  query_ledger.rs  show_benchmarks.rs  simulate.rs  simulate_command.rs  simulate_metrics.rs  simulate_reader.rs  simulate_tests.rs  sweep.rs  tessera.rs  trace.rs  transform.rs  verbose.rs  whatif.rs  workspace.rs  write.rs
crates/mc-cli/tests/: agent_cli_integration.rs  example_byte_identity.rs  mcp_smoke.rs  plugin_lint.rs
crates/mc-core/: Cargo.toml
crates/mc-core/benches/: baseline_writebatch.rs  combined_workflow.rs  consolidated_read.rs  cross_coord_write_precision.rs  demo_path.rs  derived_read.rs  dirty_propagation.rs  hierarchy_mark.rs  leaf_read_write.rs  snapshot_clone.rs  synthetic_no_deps.rs  tessera_writeback.rs
crates/mc-core/src/: batch.rs  cell.rs  consolidation.rs  coordinate.rs  cube.rs  cube_shape.rs  dependency.rs  dimension.rs  dirty.rs  element.rs  error.rs  hierarchy.rs  id.rs  lib.rs  lock.rs  permission.rs  revision.rs  rule.rs  slice.rs  snapshot.rs  store.rs  trace.rs  value.rs
crates/mc-core/tests/: acme_demo.rs  batch_correctness.rs  consolidation.rs  coordinate_validity.rs  correctness.rs  cross_coord_dirty.rs  dependency.rs  duplicate_elements.rs  hierarchy_cycle.rs  locks_permissions.rs  metrics.rs  metrics_fixtures.py  nbinom_sf.rs  nbinom_sf_fixtures.py  spike_impact_substrate.rs  trace.rs  value_nan.rs  writeback.rs  writeback_invalidated.rs
crates/mc-daemon/: Cargo.toml  README.md
crates/mc-daemon/src/: actor.rs  auth.rs  cache.rs  config.rs  coord.rs  error_envelope.rs  journal.rs  lib.rs  loader.rs  server.rs  signals.rs
crates/mc-daemon/src/handlers/: admin.rs  mod.rs  openapi.rs  query.rs  reload.rs  sweep.rs  trace.rs  whatif.rs  write.rs
crates/mc-demo-server/: Cargo.toml
crates/mc-demo-server/src/: banner.rs  ingest.rs  lib.rs  narrative.rs  pptx.rs  pptx_match.rs  pptx_profile.rs  registry.rs  server.rs  timing.rs  upload.rs  workspace.rs
crates/mc-diagnostics/: Cargo.toml
crates/mc-diagnostics/src/: diagnostic.rs  lib.rs  render.rs  render_tests.rs  span.rs
crates/mc-drivers/: Cargo.toml
crates/mc-drivers/src/: bigquery_driver.rs  csv_driver.rs  d1_driver.rs  duckdb_driver.rs  duckdb_postgres_driver.rs  http_json_driver.rs  lib.rs  mysql_driver.rs  postgres_driver.rs  snowflake_driver.rs  sqlite_driver.rs  sqlserver_driver.rs
crates/mc-drivers/tests/: csv_tests.rs  dependency_gate.rs  duckdb_postgres_tests.rs  duckdb_tests.rs  http_json_tests.rs  postgres_tests.rs  sqlite_tests.rs
crates/mc-drivers/tests/fixtures/: postgres_setup.sql  sample.csv  sample_types.csv  sample_with_nulls.csv
crates/mc-fixtures/: Cargo.toml
crates/mc-fixtures/src/: lib.rs
crates/mc-model/: Cargo.toml
crates/mc-model/examples/: acme.inputs.csv  acme.yaml
crates/mc-model/src/: compile.rs  csv.rs  diagnostic.rs  error.rs  formula.rs  inputs.rs  inspect.rs  lib.rs  lint.rs  location.rs  parse.rs  schema.rs  validate.rs
crates/mc-model/tests/: auto_populate_dimensions.rs  backwards_compat.rs  cli_snapshot.rs  degenerate_cases.rs  demo_no_goldens.rs  deterministic_emission.rs  equivalence_acme.rs  extrapolate_locf.rs  fitted_model_adstock_saturation.rs  fitted_model_output_bound.rs  fixture_validators.rs  formula_current_element.rs  formula_integration.rs  formula_parser.rs  formula_roundtrip.rs  formula_str_literals.rs  formula_validators.rs  golden_acme.rs  indicator_role.rs  lint_rules.rs  mc2011_validator.rs  param_recompute_spike.rs  parameters_block.rs  parse_validate_smoke.rs  path_escape.rs  perf_gate.rs  rich_diagnostics.rs  scenario_ref_actual_fallback.rs  schema_stability.rs  scope_extension.rs  structural_equivalence.rs  validators.rs
crates/mc-model/tests/expected/: inspect_acme.txt  inspect_acme_with_bad_golden.txt  lint_MC3001.json  lint_MC3001_missing_dim_description.txt  lint_MC3002_missing_measure_description.txt  lint_MC3003_missing_rule_description.txt  lint_MC3004_no_golden_tests.txt  lint_MC3005_orphan_element.txt  lint_MC3006_long_rule_chain.txt  lint_MC3007_ratio_with_sum.txt  lint_MC3009_unused_input_measure.txt  lint_MC3010_unused_derived_measure.txt  lint_MC3011_hierarchy_root_ambiguity.txt  lint_acme_clean.json  lint_multi_diagnostic.json  lint_multi_diagnostic.txt
crates/mc-model/tests/fixture_validation_fixtures/: MC2012_unknown_dimension_key.yaml  MC2013_unknown_element_value.yaml  MC2014_unknown_measure.yaml  MC2015_writes_derived.yaml  MC2016_duplicate_fixture_name.yaml  MC2017_golden_unknown_fixture.yaml  MC2018_value_type_mismatch.yaml  MC2019_missing_required_dimension.yaml  MC2020_writes_consolidated_cell.yaml  MC2021_value_is_nan.yaml  MC2022_source_unreadable.yaml  MC2023_csv_row_column_count.yaml  MC2023_data.csv  MC2024_csv_header_mismatch.yaml  MC2024_data.csv  MC2025_duplicate_input_coordinate.yaml
crates/mc-narrative/: Cargo.toml
crates/mc-narrative/src/: benchmark.rs  context.rs  context_events.rs  error.rs  evaluator.rs  ledger.rs  lib.rs  renderer.rs  schema.rs
crates/mc-narrative/tests/: regression.rs  rich_diagnostics.rs
crates/mc-recipe/: Cargo.toml
crates/mc-recipe/src/: diagnostic.rs  error.rs  lib.rs  parse.rs  schema.rs  validate.rs
crates/mc-recipe/tests/: examples.rs
crates/mc-tessera/: Cargo.toml
crates/mc-tessera/src/: error.rs  incremental.rs  lib.rs  prepare.rs  runner.rs  secrets.rs  sidecar.rs  time_format.rs  transform.rs
crates/mc-tessera/tests/: acme_csv_equivalence.rs  audit_history.rs  dry_run_diagnostics.rs  on_error_policies.rs  perf_100k_sqlite.rs  rollback.rs  runtime_diagnostics.rs  time_format_ingest.rs
crates/mc-workspace/: Cargo.toml
crates/mc-workspace/src/: diagnostic.rs  init.rs  inspect.rs  lib.rs  lint.rs  parse.rs  resolve.rs  schema.rs  validate.rs
crates/mc-workspace/tests/: integration.rs
(+1101 files in other folders)
