[workspace]
resolver = "2"
members = [
    "crates/mc-core",
    "crates/mc-fixtures",
    "crates/mc-cli",
    "crates/mc-model",
    "crates/mc-drivers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edwinlovettiii/marketingcubes"

[workspace.dependencies]
# Strict, minimal dependency set for Phase 1. See docs/phase-1-rust-kernel-build-brief.md §2.5.
smallvec = { version = "1", features = ["const_generics", "union"] }
ahash = "0.8"
thiserror = "1"
once_cell = "1"
# For tests + benches only:
criterion = { version = "0.5", default-features = false }
proptest = "1"
insta = { version = "1", features = ["yaml"] }

# === Phase 5A Stream C additions (mc-drivers) ===
# Pins per ADR-0010 Decision 4 + Amendment 1
# (docs/decisions/0010-amendment-1-stream-c-pin-corrections.md).
# Amendment 1 corrected the original `duckdb = "=1.3.2"` to `=1.1.1`:
# `libduckdb-sys 1.2+` uses `bindgen ^0.71.1` which emits Rust-1.82+
# `unsafe extern "C"` block syntax incompatible with the 1.78 toolchain
# pin. `duckdb 1.1.1` + `libduckdb-sys 1.1.1` (bindgen ^0.69) is the
# last 1.78-compatible pair; capability-equivalent for Phase 5A's
# reference-implementation workload. `postgres_scanner` (used by the
# DuckDB-federated-Postgres driver) has been GA since DuckDB 0.5.
csv = "1"
rusqlite = { version = "=0.31.0", features = ["bundled", "column_decltype"] }
duckdb = { version = "=1.1.1", features = ["bundled", "column_decltype"] }
postgres = "=0.19.9"
ureq = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.bench]
inherits = "release"
debug = true
