[package]
name = "mc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Mosaic — runs the Acme demo and the model {validate, inspect, lint, test} verbs"

[dependencies]
mc-core = { path = "../mc-core" }
mc-fixtures = { path = "../mc-fixtures" }
# Phase 3A: `mc demo --model <path>` routes through mc-model::load.
# The Rust fixture path stays as the canonical reference; --model is the
# new YAML path. Both paths produce byte-for-byte identical stdout.
mc-model = { path = "../mc-model" }

[[bin]]
name = "mc"
path = "src/main.rs"
