[package]
name = "mc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Mosaic — runs the Acme demo and the model {validate, inspect, lint, test} verbs"

[dependencies]
mc-core = { path = "../mc-core" }
mc-fixtures = { path = "../mc-fixtures" }
# Phase 3A: `mc demo --model <path>` routes through mc-model::load.
# The Rust fixture path stays as the canonical reference; --model is the
# new YAML path. Both paths produce byte-for-byte identical stdout.
mc-model = { path = "../mc-model" }
# Phase 5A Stream D: `mc tessera {apply, dry-run, history, rollback, audit}`.
mc-tessera = { path = "../mc-tessera" }
mc-recipe = { path = "../mc-recipe" }
mc-drivers = { path = "../mc-drivers" }
serde_json = "1"
# Phase 6A.3 item 6: replaces the `curl` subprocess in `mc tessera transform`
# with an in-process HTTP client. ureq is already pinned at the workspace
# level (used by mc-drivers); declaring it here makes the dep explicit
# without changing Cargo.lock.
ureq = { workspace = true }
# Phase 6D: demo server for `mc start`.
mc-demo-server = { path = "../mc-demo-server" }
# Phase 7A.1: narrative engine for `mc model narrate`.
mc-narrative = { path = "../mc-narrative" }

[[bin]]
name = "mc"
path = "src/main.rs"
