[package]
name = "mc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mosaic core engine — sparse multidimensional planning kernel (LNM kernel)"

[dependencies]
smallvec.workspace = true
ahash.workspace = true
thiserror.workspace = true
once_cell.workspace = true

[dev-dependencies]
mc-fixtures = { path = "../mc-fixtures" }
criterion.workspace = true

# `proptest` and `insta` are still declared at the workspace level
# (workspace.dependencies in the root Cargo.toml) but are NOT pulled
# into mc-core. None of this deliverable's tests use them. They get
# added back here when the §10.7 proptest doctrines and any
# snapshot-style tests are written.
#
# `criterion` is back in Phase 1B (handoff dated 2026-05-01). On Rust
# 1.78 it builds cleanly with `default-features = false` (set at the
# workspace level), sidestepping the `clap_lex` / `edition2024`
# transitive that broke an earlier attempt.

[[bench]]
name = "leaf_read_write"
harness = false

[[bench]]
name = "derived_read"
harness = false

[[bench]]
name = "consolidated_read"
harness = false

[[bench]]
name = "dirty_propagation"
harness = false

[[bench]]
name = "demo_path"
harness = false

# Phase 2A bench files (cold-path expansion). See
# `docs/handoffs/phase-2a-handoff.md` and `docs/PERF.md` §6.7–§6.10.
# These extend the Phase 1B suite without modifying any kernel
# behavior; the synthetic fixtures live in mc-fixtures.

[[bench]]
name = "synthetic_no_deps"
harness = false

[[bench]]
name = "snapshot_clone"
harness = false

[[bench]]
name = "hierarchy_mark"
harness = false

# Phase 2C combined-workflow bench. Simulates a 100-iteration planner
# session at 50× and 100× Acme — the load-bearing measurement that
# distinguishes between §9.3 (write-side data structure on critical
# path) and §9.2 (per-write fixed cost dominates) for Phase 2D's pick.
# See `docs/handoffs/phase-2c-handoff.md` §"Phase 2C scope" item 3.

[[bench]]
name = "combined_workflow"
harness = false

# Phase 5A Stream A — per-cell write baselines (pre-WriteBatch). Per
# ADR-0010 amendment #12, this is the FIRST commit on the Stream A
# branch and lands BEFORE `crates/mc-core/src/batch.rs` exists. See
# `docs/handoffs/phase-5a-stream-a-handoff.md` and PERF.md §6.15.

[[bench]]
name = "baseline_writebatch"
harness = false
