# Pins per ADR-0010 Decision 4 + Amendment 1
# (docs/decisions/0010-amendment-1-stream-c-pin-corrections.md).
# The 6 RustCrypto transitive pins are the original Decision 4 set; the 5
# additional transitive pins (`proc-macro-crate`, `idna_adapter`,
# `comfy-table`, `uuid`, `unicode-segmentation`) are Amendment 1 additions
# required to keep the dep tree on pre-edition2024 + pre-1.85 versions.
# `libduckdb-sys = "=1.1.1"` is also pinned (the only `libduckdb-sys`
# version that builds on Rust 1.78 without bindgen 0.71's `unsafe extern
# "C"` syntax) — pinning `duckdb` is necessary but not sufficient because
# the resolver may otherwise pull a newer `libduckdb-sys` independently.

[package]
name = "mc-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mosaic source drivers — SourceDriver trait + CSV/SQLite/DuckDB/Postgres/HTTP-JSON reference implementations (Phase 5A Stream C)."

[dependencies]
csv = { workspace = true }
rusqlite = { workspace = true }
duckdb = { workspace = true }
postgres = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }

# === Transitive pins (Phase 5A Stream C; ADR-0010 Decision 4) ===
# These appear as direct deps so the resolver respects the `=` version
# constraint and never pulls the edition2024 RustCrypto 0.11/0.13 chain
# (which is incompatible with the Rust 1.78 toolchain pin). The driver
# code does NOT import any of these — they are pin anchors only. Verify
# with: cargo tree -p mc-drivers -i block-buffer  →  must show 0.10.x.
postgres-protocol = "=0.6.7"
sha2 = "=0.10.8"
hmac = "=0.12.1"
md-5 = "=0.10.6"
digest = "=0.10.7"
block-buffer = "=0.10.4"

# === Amendment 1 transitive pins (ADR-0010 amendment 1) ===
# The original Decision 4 matrix was insufficient against fresh state on
# 2026-05-04: 5 additional crates have moved to edition2024 manifests or
# Rust >=1.85 MSRVs since the matrix was drafted. These pins anchor each
# culprit to its last 1.78-compatible non-yanked release.
#
#   proc-macro-crate 3.4.0 → toml_edit 0.23 → toml_parser 1.1+ (edition2024)
#   pin proc-macro-crate to 3.3.0, which still uses toml_edit 0.22 (no
#   toml_parser dep at all). Pulled by duckdb-rs's prost / num_enum chain.
proc-macro-crate = "=3.3.0"

#   url 2.5.x → idna 1.1.x → idna_adapter 1.2+ (edition2024 manifest).
#   Pin idna_adapter to 1.1.0. Pulled by ureq / postgres URL parsing.
idna_adapter = "=1.1.0"

#   duckdb → arrow → arrow-cast (prettyprint feature) → comfy-table.
#   comfy-table 7.2.0+ requires edition2024. Pin to 7.1.4.
comfy-table = "=7.1.4"

#   duckdb → uuid ^1; resolver default 1.23.x requires Rust 1.85.
#   Pin uuid to 1.20.0 (last pre-1.85 release).
uuid = "=1.20.0"

#   arrow-cast → unicode-segmentation. 1.13.2 requires Rust 1.85; 1.13.0
#   and 1.13.1 are yanked. Pin to 1.12.0 (last non-yanked, pre-1.85).
unicode-segmentation = "=1.12.0"

# === libduckdb-sys explicit pin (Amendment 1) ===
# Pinning `duckdb = "=1.1.1"` is necessary but not sufficient: the
# resolver may otherwise pull a newer `libduckdb-sys` (1.2.x+) within the
# `^1.1.1` SemVer range that `duckdb 1.1.1` requests, and 1.2.x emits
# bindgen 0.71+ output (`unsafe extern "C"` blocks, Rust 1.82+).
libduckdb-sys = { version = "=1.1.1", features = ["bundled"] }

[dev-dependencies]
# No dev-deps beyond std for Phase 5A Stream C.
# Test fixtures use in-memory databases and inline CSV.

[features]
# The dependency-gate test is gated behind this feature so it doesn't
# slow every `cargo test` invocation. Run explicitly:
#   cargo test -p mc-drivers --features dependency-gate -- dependency_gate
dependency-gate = []
