[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-anthropic-adapter"
version = "0.1.0"
description = "Mosaic Phase 4B reference adapter — Anthropic Python SDK consumer of the Mosaic plugin (default provider per ADR-0008 amendment D)."
requires-python = ">=3.10"
license = { text = "See repository LICENSE" }
authors = [{ name = "Mosaic project" }]
dependencies = [
    "anthropic>=0.40",
]

[project.scripts]
mosaic-author-anthropic = "author:main"

[tool.setuptools]
py-modules = ["author"]
