[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-openai-adapter"
version = "0.1.0"
description = "Mosaic Phase 4B reference adapter — OpenAI Python SDK consumer of the Mosaic plugin (cross-provider proof per ADR-0008 amendment G)."
requires-python = ">=3.10"
license = { text = "See repository LICENSE" }
authors = [{ name = "Mosaic project" }]
dependencies = [
    "openai>=1.50",
]

[project.scripts]
mosaic-author-openai = "author:main"

[tool.setuptools]
py-modules = ["author"]
